--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
     name: app-wil
 spec:
-    replicas: 2
+    replicas: 1
     selector:
         matchLabels:
             app: app-wil
@@ -29,3 +29,22 @@ spec:
       targetPort: 8888
     selector:
         app: app-wil
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: app-wil-ingress
+  namespace: argocd
+  annotations:
+    kubernetes.io/ingress.class: nginx
+spec:
+  rules:
+  - http:
+        paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+                name: app-wil
+                port:
+                    number: 8888
